Bug 355290 - Krunner (5.15.0) crashes when trying to access '/'
Summary: Krunner (5.15.0) crashes when trying to access '/'
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: places (other bugs)
Version First Reported In: unspecified
Platform: Chakra Linux
: NOR crash
Target Milestone: ---
Assignee: Sebastian Kügler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-13 13:57 UTC by Jboot
Modified: 2015-11-14 00:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jboot 2015-11-13 13:57:08 UTC
When trying to access the root folder with krunner by typing '/', it crashes.

Reproducible: Always

Steps to Reproduce:
1. Launch krunner (alt + F2)
2. type '/'
3. press enter

Actual Results:  
crash

Expected Results:  
Opening dolphin in the '/' folder.
Comment 1 Weng Xuetian 2015-11-14 00:40:38 UTC
Git commit 0ab0823d8cd192f67a431174fa02b8975adc8987 by Weng Xuetian.
Committed on 14/11/2015 at 00:36.
Pushed by xuetianweng into branch 'master'.

Fix krunner crash when open "/"

path.split may return empty string list if path contains only separator,
check the result before access it with last().

REVIEW: 126060
FIXED-IN: 5.5.0

M  +5    -0    runners/locations/locationrunner.cpp

http://commits.kde.org/plasma-workspace/0ab0823d8cd192f67a431174fa02b8975adc8987