Fix krunner crash when open "/"

path.split may return empty string list if path contains only separator,
check the result before access it with last().

REVIEW: 126060
BUG: 355290
FIXED-IN: 5.5.0